--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     }
   ],
   "require": {
-    "php": ">=5.5.9",
-    "phpstan/phpstan": "^0.11.5",
+    "php": "^7.1",
+    "phpstan/phpstan": "^0.12.3",
     "friendsofphp/php-cs-fixer": "^2.14"
   },
   "bin": [
