--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,10 @@
   ],
   "require": {
     "php": "^7.1",
-    "phpstan/phpstan": "^0.12.3",
-    "friendsofphp/php-cs-fixer": "^2.14"
+    "friendsofphp/php-cs-fixer": ">=2.14",
+    "phpstan/phpstan": ">=0.9",
+    "phpstan/phpstan-doctrine": ">=0.9",
+    "phpstan/phpstan-symfony": ">=0.9"
   },
   "bin": [
     "bin/check_code.sh",
