--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     }
   ],
   "require": {
-    "php": "^7.1",
+    "php": ">=7.1",
     "friendsofphp/php-cs-fixer": ">=2.14",
     "phpstan/phpstan": ">=0.9",
     "phpstan/phpstan-doctrine": ">=0.9",
